@@ -234,6 +234,13 @@
       <icon-name>sylpheed</icon-name>
       <run-in-terminal>false</run-in-terminal>
     </mail-reader>
+    <mail-reader>
+      <_name>Sylpheed</_name>
+      <executable>sylpheed</executable>
+      <command>sylpheed --compose %s</command>
+      <icon-name>sylpheed</icon-name>
+      <run-in-terminal>false</run-in-terminal>
+    </mail-reader>
   </mail-readers>
 
   <terminals>
