@@ -1,3 +1,9 @@
+2006-04-13  Luca Cavalli  <loopback@slackit.org>
+
+	* gnome-default-applications.xml.in: add support for Sylpheed. Based
+	on a patch from Fryderyk Dziarmagowski <freetz@pld-linux.org>.
+	Closes bug #332659.
+
 2006-03-23  Luca Cavalli  <loopback@slackit.org>
 
 	* gnome-default-applications.xml.in: Fix Thunderbird command line
